--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,11 @@ doctest_plus = enabled
 auto_use = True
 
 [metadata]
-package_name = linetools
-description = A package for analysing absorption and emission lines in 1d spectra, especially galaxy and quasar spectra.
+package_name = pyigm
+description = A package for analysing the Intergalactic Medium
 #long_description = A package for analysing 1d spectra, especially galaxy and quasar spectra.
-author = J. X. Prochaska, N. Crighton, and associates
-author_email = xavier@ucolick.org, neilcrighton@gmail.com
+author = J. X. Prochaska and associates
+author_email = xavier@ucolick.org
 license = BSD
 edit_on_github = False
-github_project = linetools/linetools
+github_project = pyigm/pyigm
