--- a/.travis.yml
+++ b/.travis.yml
@@ -113,7 +113,7 @@ install:
     # install since this ensures Numpy does not get automatically upgraded.
     - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION scipy; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL specutils; fi
-    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL linetools; fi
+    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL git+https://github.com/linetools/linetools.git; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL pyyaml; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION matplotlib; fi
 
