--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,17 @@
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
-
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
-
+#[build_sphinx]
+#source-dir = docs
+#build-dir = docs/_build
+#all_files = 1
+#
+#[upload_docs]
+#upload-dir = docs/_build/html
+#show-response = 1
+#
 [pytest]
 minversion = 2.2
-norecursedirs = build docs/_build
-doctest_plus = enabled
-
+norecursedirs = build #docs/_build
+###doctest_plus = enabled
+#
 [ah_bootstrap]
 auto_use = True
 
