--- a/.travis.yml
+++ b/.travis.yml
@@ -63,8 +63,8 @@ matrix:
           env: SETUP_CMD='test'
 
         # Try older numpy versions.
-        - python: 2.7
-          env: NUMPY_VERSION=1.9 SETUP_CMD='test'
+        #- python: 2.7
+        #  env: NUMPY_VERSION=1.9 SETUP_CMD='test'
         # Skip these, because the require astropy versions < 1.0
         #- python: 2.7
         #  env: NUMPY_VERSION=1.8 SETUP_CMD='test'
