--- a/.travis.yml
+++ b/.travis.yml
@@ -116,8 +116,8 @@ install:
     - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION mpmath; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL git+https://github.com/linetools/linetools.git; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL pyyaml; fi
-    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL triangle; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL emcee; fi
+    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL corner; fi
     - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION matplotlib; fi
 
     # DOCUMENTATION DEPENDENCIES
