--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ addons:
 
 python:
     - 2.7
-    - 3.4
     - 3.5
+    - 3.6
 
     # This is just for "egg_info".  All other builds are explicitly given in the matrix
 env:
@@ -57,9 +57,11 @@ matrix:
           env: SETUP_CMD='test'
         #- python: 3.3
         #  env: SETUP_CMD='test'
-        - python: 3.4
-          env: SETUP_CMD='test'
+        #- python: 3.4
+        #  env: SETUP_CMD='test'
         - python: 3.5
+          env: SETUP_CMD='test'
+        - python: 3.6
           env: SETUP_CMD='test'
 
         # Try older numpy versions.
