--- a/.travis.yml
+++ b/.travis.yml
@@ -116,6 +116,8 @@ install:
 
     - git clone git://github.com/astropy/ci-helpers.git
     - source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
+    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL git+https://github.com/linetools/linetools.git; fi
+
 
 script:
     - $MAIN_CMD $SETUP_CMD
