--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@
 #upload-dir = docs/_build/html
 #show-response = 1
 #
-[pytest]
+[tools:pytest]
 minversion = 2.2
 norecursedirs = build #docs/_build
 ###doctest_plus = enabled
