--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,8 @@ matrix:
         #  env: SETUP_CMD='test'
 
         # Do a coverage test.
-        - os: linux
-          env: SETUP_CMD='test --coverage'
+        #- os: linux
+        #  env: SETUP_CMD='test --coverage'
 
         # Check for sphinx doc build warnings - we do this first because it
         # may run for a long time
@@ -123,5 +123,5 @@ script:
     - $MAIN_CMD $SETUP_CMD
 
 
-after_success:
-    - if [[ $SETUP_CMD == 'test --coverage' ]]; then coveralls --rcfile='pyigm/tests/coveragerc'; fi
+#after_success:
+#    - if [[ $SETUP_CMD == 'test --coverage' ]]; then coveralls --rcfile='pyigm/tests/coveragerc'; fi
