--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ matrix:
         # time.
 
         - os: linux
-          env: PYTHON_VERSION=2.7 NUMPY_VERSION=1.11
+          env: PYTHON_VERSION=2.7 NUMPY_VERSION=1.13
         #- os: linux
         #  env: PYTHON_VERSION=3.3 NUMPY_VERSION=1.8
         #- os: linux
@@ -95,7 +95,9 @@ matrix:
         #- os: linux
         #  env: PYTHON_VERSION=3.5 NUMPY_VERSION=1.10
         - os: linux
-          env: NUMPY_VERSION=1.11
+          env: NUMPY_VERSION=1.13
+        - os: linux
+          env: NUMPY_VERSION=1.14
 
         # Try numpy pre-release
         - os: linux
