--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,8 @@ matrix:
 
         - os: linux
           env: PYTHON_VERSION=2.7 NUMPY_VERSION=1.13
+        - os: linux
+          env: PYTHON_VERSION=2.7 NUMPY_VERSION=1.14
         #- os: linux
         #  env: PYTHON_VERSION=3.3 NUMPY_VERSION=1.8
         #- os: linux
