--- a/.travis.yml
+++ b/.travis.yml
@@ -70,9 +70,9 @@ matrix:
         #  env: SETUP_CMD='build_docs -w'
 
         # Now try Astropy dev and LTS vesions with the latest 3.x and 2.7.
-        - os: linux
-          env: PYTHON_VERSION=2.7 ASTROPY_VERSION=development
-               EVENT_TYPE='pull_request push cron'
+        #- os: linux
+        #  env: PYTHON_VERSION=3.5 ASTROPY_VERSION=development
+        #       EVENT_TYPE='pull_request push cron'
         - os: linux
           env: ASTROPY_VERSION=development
                EVENT_TYPE='pull_request push cron'
