--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
         - NUMPY_VERSION=stable
         - MAIN_CMD='python setup.py'
         - SETUP_CMD='test'
-        - CONDA_DEPENDENCIES='scipy h5py pyyaml matplotlib'
+        - CONDA_DEPENDENCIES='scipy h5py pyyaml matplotlib numba'
         - PIP_DEPENDENCIES=''
         - EVENT_TYPE='pull_request push'
         - TASK='test'
